--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,21 +42,16 @@
     </a>
 </div>
 
-<section class="wrapper style1 align-center">
-<div class="card-container">
-    <div class="card card-2">
-      <div class="card-img"></div>
-      <a href="blog/sta_marta.html" class="card-link">
-        <div class="card-img-hovered"></div>
-      </a>
-      <div class="card-info">
-          <h2>Farol de Santa Marta</h2>
-          <i>a decisão de pegar a estrada e a Kombi</i></h1>
-        <div class="card-time">01 abr, 2024</div>
-      </div>
-    </div>
-  
+<div class="items style3 medium onscroll-fade-in">
+    
+<a href="blog/sta_marta.html" style="text-decoration: none">
+  <section class="card">
+        <img src="../images/blog/sta_marta/thumb.jpeg" width=100% height= 100% alt="" />
+        <h2>Farol de Santa Marta</h2>
+        <i>a Kombi e a decisão de pegar a estrada</i><br>
+      <sub>01 abr, 2024</sub>
   </section>
+</a>
 <!-- Scripts -->
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
