--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,7 +45,7 @@
 <div class="items style3 medium onscroll-fade-in">
     
 <a href="blog/sta_marta.html" style="text-decoration: none">
-  <section class="card">
+  <section class="cardblog">
         <img src="../images/blog/sta_marta/thumb.jpeg" width=100% height= 100% alt="" />
         <h2>Farol de Santa Marta</h2>
         <i>a Kombi e a decisão de pegar a estrada</i><br>
