--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								Só agora entendi que não quero participar daquilo.<br>
 								Foi pra cá que eu fugi.
 							<ul class="actions stacked">
-								<li><a href="pages/musica.html" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
+								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
 							</ul>
 						</div>
 						<div class="image">
