--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,7 +60,7 @@
     
 <a href="blog/sta_marta" style="text-decoration: none">
   <section class="cardblog">
-        <img src="../images/blog/sta_marta/thumb.jpeg" width=100% height= 100% alt="" />
+        <img src="../images/blog/sta_marta/thumb.jpg" width=100% height= 100% alt="" />
         <h2>Farol de Santa Marta</h2>
         <i>a Kombi e a decisão de pegar a estrada</i><br>
       <sub>01 abr, 2024</sub>
